[package]
name = "global"
version = "0.1.0"
authors = ["Richard <Richard>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no_mutex={path="../../"}

[dependencies.once_cell]
version = "1"
default-features = false
features = []